--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-quill-editor": "^3.0.6",
     "vue-resize": "^0.4.4",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vuetify": "^1.1.0-alpha.5"
   },
