--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@websanova/vue-auth": "^2.21.14-beta",
+    "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "lodash.truncate": "^4.4.2",
     "nprogress": "^0.2.0",
     "quill": "^1.3.6",
     "vee-validate": "^2.0.9",
     "vue": "^2.5.16",
+    "vue-axios": "^2.1.4",
     "vue-fullcalendar": "^1.0.9",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-quill-editor": "^3.0.6",
