--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@websanova/vue-auth": "^2.21.14-beta",
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.3.0",
     "lodash.truncate": "^4.4.2",
     "nprogress": "^0.2.0",
     "quill": "^1.3.6",
